Implemention of spring cloud functions

--- a/Notification/pom.xml
+++ b/Notification/pom.xml
@@ -31,11 +31,12 @@
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 	</properties>
 	<dependencies>
+         <!-- dependency to run the http request -->
 		 <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
             </dependency>
-
+        <!--Both of cloud funciton context and web dependency to run the api with Functions.  -->
 		<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-function-context</artifactId>
@@ -45,21 +46,24 @@
                 <artifactId>spring-cloud-function-web</artifactId>
             </dependency>
 
+<!--         used for making a eureka client  -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+<!--         used for to autoupdate the project after any update in project. -->
 		 <dependency>
               <groupId>org.springframework.boot</groupId>
               <artifactId>spring-boot-devtools</artifactId>
             </dependency>
-
+<!--         used to getter, setter, and other function of OOps concept -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
