--- a/Notification/src/main/resources/application.properties
+++ b/Notification/src/main/resources/application.properties
@@ -13,4 +13,9 @@ management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 management.endpoint.shutdown.access=none
 
-#spring.cloud.function.web.path=function
+#rabbit mq configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
