--- a/Order-Service/pom.xml
+++ b/Order-Service/pom.xml
@@ -31,10 +31,22 @@
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 	</properties>
 	<dependencies>
+	     <dependency>
+              <groupId>org.springframework.cloud</groupId>
+              <artifactId>spring-cloud-stream</artifactId>
+         </dependency>
+
+		<dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
