--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -12,3 +12,16 @@ eureka.client.service-url.defaultZone=http://localhost:9090/eureka
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 management.endpoint.shutdown.access=none
+
+#rabbit mq configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#configure spring cloud stream
+#this is to send the message
+spring.cloud.stream.bindings.orderCreatedEvent-out-0.destination=order.created
+spring.cloud.stream.bindings.orderCreatedEvent-out-0.contentType=application/json
+spring.cloud.stream.bindings.orderCreatedEvent-out-0.group=${spring.application.name}
+
