Configure the NotificationService to recieve the message from order server

--- a/Notification/src/main/resources/application.properties
+++ b/Notification/src/main/resources/application.properties
@@ -19,3 +19,13 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+spring.cloud.stream.function.definition=orderEventReceiver
+
+#configure spring cloud stream binding on reciever end
+spring.cloud.stream.bindings.orderEventReceiver-in-0.destination=order.created
+spring.cloud.stream.bindings.orderEventReceiver-in-0.contentType=application/json
+spring.cloud.stream.bindings.orderEventReceiver-in-0.group=${spring.application.name}
+
+#spring.cloud.stream.bindings.orderEventReceiver-out-0.destination=order.processed
+#spring.cloud.stream.bindings.orderEventReceiver-out-0.contentType=application/json
+
