Add kafka dependency in Order

--- a/Notification/src/main/resources/application.properties
+++ b/Notification/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.cloud.stream.bindings.orderEventReceiver-in-0.destination=order.created
 spring.cloud.stream.bindings.orderEventReceiver-in-0.contentType=application/json
 spring.cloud.stream.bindings.orderEventReceiver-in-0.group=${spring.application.name}
 
-#spring.cloud.stream.bindings.orderEventReceiver-out-0.destination=order.processed
-#spring.cloud.stream.bindings.orderEventReceiver-out-0.contentType=application/json
-
+ #configuration for send the acknowledgement
+spring.cloud.stream.bindings.orderEventReceiver-out-0.destination=order.ack
+spring.cloud.stream.bindings.orderEventReceiver-out-0.contentType=application/json
+spring.cloud.stream.bindings.orderEventReceiver-out-0.group=${spring.application.name}
