--- a/Order-Service/pom.xml
+++ b/Order-Service/pom.xml
@@ -36,9 +36,14 @@
               <artifactId>spring-cloud-stream</artifactId>
          </dependency>
 
-		<dependency>
-          <groupId>org.springframework.cloud</groupId>
-          <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+<!-- 		<dependency> -->
+<!--           <groupId>org.springframework.cloud</groupId> -->
+<!--           <artifactId>spring-cloud-starter-stream-rabbit</artifactId> -->
+<!--         </dependency> -->
+
+        <dependency>
+                  <groupId>org.springframework.cloud</groupId>
+                  <artifactId>spring-cloud-starter-stream-kafka</artifactId>
         </dependency>
 
 		<dependency>
