--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.cloud.stream.bindings.orderCreatedEvent-out-0.destination=order.created
 spring.cloud.stream.bindings.orderCreatedEvent-out-0.contentType=application/json
 spring.cloud.stream.bindings.orderCreatedEvent-out-0.group=${spring.application.name}
 
+#Configuration to recieve the acknowledgement
+spring.cloud.stream.bindings.consumerAck-in-0.destination=order.ack
+spring.cloud.stream.bindings.consumerAck-in-0.contentType=application/json
+spring.cloud.stream.bindings.consumerAck-in-0.group=${spring.application.name}
+
