--- a/Notification/pom.xml
+++ b/Notification/pom.xml
@@ -42,6 +42,11 @@
            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
          </dependency>
 
+         <dependency>
+                   <groupId>org.springframework.cloud</groupId>
+                   <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+                 </dependency>
+
 
          <!-- dependency to run the http request -->
 		 <dependency>
