--- a/Notification/src/main/resources/application.properties
+++ b/Notification/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+#kafka configuration
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
+
 spring.cloud.stream.function.definition=orderEventReceiver
 
 #configure spring cloud stream binding on reciever end
