--- a/Order-Service/src/main/resources/application.properties
+++ b/Order-Service/src/main/resources/application.properties
@@ -13,11 +13,14 @@ management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 management.endpoint.shutdown.access=none
 
-#rabbit mq configuration
+#rabbitMQ configuration
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+#kafka configuration
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
 
 #configure spring cloud stream
 #this is to send the message
